cache popular products
